Fix height of fremhevet and collapsed (ShowMore)

--- a/aksel.nav.no/website/app/dev/(designsystemet)/grunnleggende/endringslogg/_ui/ShowMore.module.css
+++ b/aksel.nav.no/website/app/dev/(designsystemet)/grunnleggende/endringslogg/_ui/ShowMore.module.css
@@ -17,7 +17,7 @@
 
 .showMoreCollapsed {
   margin-bottom: 0;
-  mask-image: linear-gradient(rgba(0 0 0/1), rgba(0 0 0/1) 30%, rgba(0 0 0/ 0) calc(100% - 2.5rem));
+  mask-image: linear-gradient(rgba(0 0 0/1), rgba(0 0 0/1) 30%, rgba(0 0 0/ 0) calc(100% - var(--ax-space-16)));
 }
 
 .showMoreExpanded {
